# Gatekeeper

./: ._.git  .dockerignore  .env.example  .gitignore  Dockerfile  GITHUB_ACTIONS.md  README.md  docker-compose.yml  filters.yaml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: cve-monitor.yml  manual-run.yml
data/: .gitkeep
gatekeeper/: __init__.py  config.py  filtering.py  main.py  run_once.py
gatekeeper/advisory/: __init__.py  generator.py  prompts.py
gatekeeper/collector/: __init__.py  circl.py  kev.py  models.py  nvd.py  vulncheck.py  vulners.py
gatekeeper/deduplication/: __init__.py  store.py
gatekeeper/delivery/: __init__.py  email.py
gatekeeper/research/: __init__.py  duckduckgo.py  enrichment.py
logs/: .gitkeep
